CRUD, admin, herencia templates

--- a/home/templates/home/listado_de_alumnos.html
+++ b/home/templates/home/listado_de_alumnos.html
@@ -1,27 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <nav>
-        <a href={% url "inicio" %}>Inicio</a>
-        <a href={% url "crear_alumno" %}>Crear alumno</a>
-        <a href={% url "listado_de_alumnos" %}>Listado de alumnos</a>
-    </nav>
+{% extends "base.html" %}
+
+{% block contenido %}
     <h1>Listado de alumnos</h1>
+    <p>
+        <a href={% url "crear_alumno" %}>Crear alumno</a>
+    </p>
 
     {% if alumnos %}
     <ul>
         {% for alumno in alumnos %}
         <li>
-            {{alumno}}
+            {{alumno}} 
+            | <a href={% url "detalle_alumno" alumno.id %}>Ver más</a>
+            | <a href={% url "modificar_alumno" alumno.id %}>Modificar</a>
+            | <a href={% url "eliminar_alumno" alumno.id %}>Eliminar</a>
         </li>
         {% endfor %}
     </ul>
     {% else %}
     <p> No hay alumnos creados. </p>
     {% endif %}
-</html>
+
+
+{% endblock contenido %}
