--- a/home/templates/home/modificar_alumno.html
+++ b/home/templates/home/modificar_alumno.html
@@ -2,7 +2,7 @@
 
 {% block contenido %}
     <h1>Modificar {{alumno}}</h1>
-    <form action="{% url 'modificar_alumno' alumno.id %}" method="POST">
+    <form action="{% url 'modificar_alumno' alumno.id %}" method="POST"  enctype="multipart/form-data">
         {% csrf_token %} 
 
         {{form}}
